<resources>
    <string name="app_name">Reversi</string>
    <string name="title">Reversi app</string>
    <string name="round_already_finished">Game already finished</string>
    <string name="invalid_movement">Invalid movement</string>
    <string name="game_over">Game finished</string>
    <string name="new_round">New round</string>
    <string name="game_over_message">Play new game?</string>
    <string name="round_restarted">Round restarted</string>
    <string name="no_valid_movements">No valid movements</string>
    <string name="round_title">ROUND</string>
    <string name="positive">Yes</string>
    <string name="ok">OK</string>
    <string name="negative">No</string>
    <string name="local_player_default_name">Local player</string>
    <string name="random_player_default_name">Random player</string>
    <string name="settings">Settings</string>
    <string name="settings_title">Game settings</string>
    <string name="repository_opening_error">Error opening repository of rounds</string>
    <string name="error_reading_rounds">Error reading rounds</string>
    <string name="error_updating_round">Error updating round</string>
    <string name="new_user">new user</string>
    <string name="cancel_login">cancel</string>
    <string name="login">login</string>
    <string name="help">Help</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="remember_user">Keep me logged in?</string>
    <string name="access_contacts">Access your contacts list</string>
    <string name="switch_online_summary">Switch it to play online</string>
    <string name="switch_online_title">Play online?</string>
    <string name="contacts">Contacts</string>
    <string name="account">Account</string>
    <string name="select_name_summary">Select your name</string>
    <string name="select_name_title">Player name</string>
    <string name="logout_title">Log-out</string>
    <string name="logout_summary">Go back to login screen</string>
    <string name="contacts_permission_denied">The contacts won\'t be shown since permission has been denied</string>
    <string name="write_your_password">password</string>
    <string name="write_playername">username</string>
    <string name="rounds_empty">No rounds started yet</string>
    <string name="round">ROUND \u0020</string>
    <string name="change_password_sumary">Change your password</string>
    <string name="change_password_title">Password</string>
    <string name="contacts_permission_request">The access to contacts is required just to show them</string>
    <string name="login_error_title">Authentication error</string>
    <string name="username_already_exists">A player with this name already exists!</string>
    <string name="error_inserting_user">Error inserting user named \u0020</string>
    <string name="no_rounds_found">No rounds found on database</string>
    <string name="fill_text">Fill this field</string>
    <string name="game_rules">Each reversi piece has a black side and a white side.
        On your turn, you place one piece on the board with your color facing up.
        It must be placed so that an opponent\'s piece, or a row of opponent\'s pieces, is flanked by your pieces.
        All of the opponent\'s pieces between your pieces are then turned over to become your color.
        The player with the most pieces on the board, when there isn\'t any more valid moves, is the one who wins the game.
    </string>
    <string name="email">jorge.cifuentesf@estudiante.uam.es</string>
    <string name="black_player_has">BLACK PLAYER HAS</string>
    <string name="white_player_has">WHITE PLAYER HAS</string>
    <string name="cant_change_password">Unable to change password</string>
    <string name="not_your_turn">Not your turn</string>
    <string name="board_updated_play_again">Board updated, play again</string>
</resources>
