<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_title">

        <SwitchPreference
            android:key="switch_online"
            android:summary="@string/switch_online_summary"
            android:title="@string/switch_online_title">

        </SwitchPreference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/contacts">

        <Preference
            android:key="access_contacts"
            android:title="@string/access_contacts"></Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/account">

        <EditTextPreference
            android:key="playername"
            android:summary="@string/select_name_summary"
            android:title="@string/select_name_title">

        </EditTextPreference>

        <Preference
            android:key="logout"
            android:summary="@string/logout_summary"
            android:title="@string/logout_title">

        </Preference>

    </PreferenceCategory>


</PreferenceScreen>
